# huff-tree-tap

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  release.yml  rust.yml
benches/: huffman.rs
src/: data.rs  encoding_map.rs  encoding_stats.rs  error.rs  frequency_map.rs  huffman.rs  huffman_tree.rs  lib.rs  node.rs
src/encoding_map/: frequency_map.rs  huffman_tree.rs  mod.rs
src/encoding_map/tests/: frequency_map.rs  huffman_tree.rs  mod.rs
tests/: tests.rs
