[package]
name = "huff-tree-tap"
version = "0.0.5"
description = "Huffman Encoder and Decoder Library"
authors = ["Alexis Lowe <alexis.lowe@protonmail.com>"]
edition = "2018"
repository = "https://github.com/chimbosonic/huff-tree-tap/"
license = "MIT"
readme = "README.md"
keywords = ["huffman", "compression"]
categories = ["algorithms","compression"]


[dependencies]
hex = "0.4.3"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
