[package]
name = "huff-tree-tap"
version = "0.1.0"
description = "Huffman Encoder and Decoder Library"
authors = ["Alexis Lowe <alexis.lowe@chimbosonic.com>"]
edition = "2021"
repository = "https://github.com/chimbosonic/huff-tree-tap/"
license = "MIT"
readme = "README.md"
keywords = ["huffman", "compression"]
categories = ["algorithms","compression"]

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "huffman"
harness = false
